# ColudCompare

libs/CCAppCommon/src/: ccPluginManager.cpp  ccTranslationManager.cpp
libs/qCC_glWindow/include/: ccGLWidget.h
plugins/: CMakeLists.txt  CMakePluginTpl.cmake
plugins/example/: CMakeLists.txt
plugins/example/ClusterByPickPointPlugin/: CMakeLists.txt  ClusterByPickPointPlugin.qrc  info.json
plugins/example/ClusterByPickPointPlugin/images/include/: CMakeLists.txt
plugins/example/ClusterByPickPointPlugin/images/src/: ByPickPoint.cpp  CMakeLists.txt  ClusterByPickPointPlugin.cpp
plugins/example/ClusterByPickPointPlugin/include/: CMakeLists.txt
plugins/example/ClusterByPickPointPlugin/src/: ByPickPoint.h  CMakeLists.txt  ClusterByPickPointPlugin.h
plugins/example/ClusterByPickPointPlugin/ui/: ByPickPointDlg.ui  CMakeLists.txt
plugins/example/ConvexHullPlugin2D/: CMakeLists.txt  ConvexHullPlugin2D.qrc  info.json
plugins/example/ConvexHullPlugin2D/include/: CMakeLists.txt  ConvexHull2D.h  ConvexHullPlugin2D.h  Point2.h
plugins/example/ConvexHullPlugin2D/src/: CMakeLists.txt  ConvexHull2D.cpp  ConvexHullPlugin2D.cpp  Point2.cpp
plugins/example/ElevationPointsPlugin/: CMakeLists.txt  ElevationPointsPlugin.qrc  info.json
plugins/example/ElevationPointsPlugin/include/: CMakeLists.txt  ElevationPointsPlugin.h
plugins/example/ElevationPointsPlugin/src/: CMakeLists.txt  ElevationPointsPlugin.cpp
plugins/example/GridMinimumPlugin/: CMakeLists.txt  GridMinimumPlugin.qrc  info.json
plugins/example/GridMinimumPlugin/include/: CMakeLists.txt  GridMinimumPlugin.h
plugins/example/GridMinimumPlugin/src/: CMakeLists.txt  GridMinimumPlugin.cpp
qCC/: CMakeLists.txt  SupervoxelClusteringPluginDlg.cpp  SupervoxelClusteringPluginDlg.h  ccContourExtractor.cpp  ccContourExtractor.h  ccContourExtractorDlg.cpp  ccKMeansDlg.cpp  ccKMeansDlg.h  main.cpp  mainwindow.cpp  mainwindow.h
qCC/pluginManager/: ccPluginUIManager.cpp
qCC/ui_templates/: ClusterByPickPointDlg.ui  KMeansDlg.ui  SupervoxelClusteringPluginDlg.ui  mainWindow.ui
