
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/ExampleGLPlugin )
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/ExampleIOPlugin )
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/ExamplePlugin )
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/ElevationPointsPlugin )
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/ConvexHullPlugin2D )
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/GridMinimumPlugin )
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/ClusterByPickPointPlugin )
